--- a/docs/content/docs/core/game-context/data-service.mdx
+++ b/docs/content/docs/core/game-context/data-service.mdx
@@ -5,9 +5,48 @@ description: Service for interacting with the book data or recorder.
 
 ---
 
-## Introduction
-
-The core game state holds useful information about the current simulation.
-
 ## Methods
 
+### record()
+
+| Method                       | Type             |
+| ---------------------------- | ---------------- |
+| `ctx.services.data.record()` | `(data) => void` |
+
+#### Parameters [!toc]
+
+| Parameter | Type                                          |
+| --------- | --------------------------------------------- |
+| `data`    | `Record<string, string \| number \| boolean>` |
+
+Record data for statistical analysis.
+
+[Further reading](/docs/core/game-flow/recorder)
+
+### recordSymbolOccurrence()
+
+| Method                                       | Type             |
+| -------------------------------------------- | ---------------- |
+| `ctx.services.data.recordSymbolOccurrence()` | `(data) => void` |
+
+#### Parameters [!toc]
+
+| Parameter | Type                                                                          |
+| --------- | ----------------------------------------------------------------------------- |
+| `data`    | `{ kind: number; symbolId: string; spinType: SpinType; [key: string]: any; }` |
+
+A wrapper around `ctx.services.data.record()` to record symbol occurrences.
+
+### addBookEvent()
+
+| Method                             | Type              |
+| ---------------------------------- | ----------------- |
+| `ctx.services.data.addBookEvent()` | `(event) => void` |
+
+#### Parameters [!toc]
+
+| Parameter | Type                                          |
+| --------- | --------------------------------------------- |
+| `event`   | `{ type: string, data: Record<string, any> }` |
+
+A wrapper around `ctx.services.data.record()` to record symbol occurrences.
