--- a/docs/content/docs/core/game-implementation/index.mdx
+++ b/docs/content/docs/core/game-implementation/index.mdx
@@ -72,6 +72,12 @@ export function onHandleGameFlow(ctx: Context) {
 }
 ```
 
+## Game Flow Visualization
+
+To help you understand slot game flows, here is a graphic showing a general game flow.
+
+![Game Flow Graphic](/game-flow.png)
+
 ## Next Steps
 
 Learn about the [context object](/docs/core/game-context) and what role it plays when implementing your game.
